# action-knowledge-worker

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  alembic.ini  db.py  docker-compose.yml  dump.py  main.py  mock_tools.py  ontologist.py  pyproject.toml  query_graph.py  rules.py  seed.py  spec_factory.py  test_api_flow.py
agent-core/: builder_agent.py  db.py  dedup_entities.py  docker-compose.yml  dump.py  main.py  mock_tools.py  ontologist.py  policies.py  policy_builder.py  pyproject.toml  query_graph.py  rules.py  seed.py  seed_demo_topology.py  spec_factory.py
agent-core/migrations/: env.py
agent-core/migrations/versions/: 001_initial_schema.py  a1b2c3d4e5f6_remove_next_in_chain_edge_type.py  af389511627d_add_delegations.py  b2b7c96e4b5b_add_canonical_key_to_ontology_types.py  c3d4e5f6a7b8_add_domain_range_to_edge_types.py  d00fadcc760c_unique_edge_src_dst_type.py  e1f2a3b4c5d6_add_policy_rules_table.py  f1a2b3c4d5e6_add_session_id_to_runs.py  g2h3i4j5k6l7_add_pg_trgm_extension.py  h3i4j5k6l7m8_add_subject_source_to_policy_rules.py  i4j5k6l7m8n9_add_tool_input_filter_to_policy_rules.py  j5k6l7m8n9o0_add_synonyms_to_edge_types.py
agent-core/tests/: conftest.py
agent-core/tests/test_builder/: test_builder_agent.py
agent-core/tests/test_ontology/: test_relationship_reuse.py  test_type_matching.py
agent-core/tests/test_runtime/: test_cross_session.py  test_delegation.py  test_hook_wiring.py  test_smoke.py  test_task_lifecycle.py
agent-core/tests/test_tools/: test_query_graph.py
backend/: api.py  requirements.txt
frontend/: index.html  package.json  (+1 more)
(+24 files in other folders)
